[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transformations_illimarr"
version = "0.0.2"
authors = [
  { name="IllimarR" },
]
description = "Moodul koordinaatide teisendamiseks WGS84 ja L-Est97 vahel"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "pyproj>= 3.5.0"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/IllimarR/transformations"
Issues = "https://github.com/IllimarR/transformations/issues"